apps/matrix/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix
spec:
  template:
    spec:
      containers:
        - name: synapse
          ports:
            - containerPort: 8448
              name: https
          readinessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          livenessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          startupProbe:
            httpGet:
              port: https
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
