apps/matrix/components/tls/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
spec:
  defaultBackend:
    service:
      name: matrix-proxy
      port:
        name: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-discord-media
spec:
  defaultBackend:
    service:
      name: matrix-proxy
      port:
        name: https
